# HW6-HMM

./: README.md  pyproject.toml
hmm/: hmm.py
test/: test_hmm.py
